Apply small padding to .date to prevent italic text from being cut off

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1604,6 +1604,7 @@ html.swal2-height-auto {
 	font-size: 14px;
 	font-style: italic;
 	text-align: right;
+    padding-right: 2px;
 }
 
 @mixin blog_card-hover($hover_or_active) {
